chore: adjust tsconfig.build.json

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -7,6 +7,6 @@
     "declaration": false
   },
 
-  "include": ["./src"],
+  "include": ["./src", "./*.d.ts"],
   "exclude": ["node_modules", "./src/**/*.test.ts", "./src/**/*.spec.ts"]
 }
