--- a/package.json
+++ b/package.json
@@ -20,26 +20,25 @@
     "node": "24.x"
   },
   "scripts": {
-    "build": "rimraf build && tsc -p tsconfig.build.json && tsc-alias -p tsconfig.build.json -f",
+    "build": "rimraf build && tsc -p tsconfig.build.json",
     "dev": "tsx --watch src/main.ts",
     "start": "node build/main.js",
     "test": "vitest",
     "biome-check": "biome check --no-errors-on-unmatched",
     "biome-fix": "yarn biome-check --write",
-    "typecheck": "tsc --noEmit",
+    "typecheck": "tsc",
     "prepare": "husky"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.2.2",
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
-    "@mkvlrn/config": "^2.0.15",
+    "@mkvlrn/config": "^2.0.16",
     "@types/node": "^24.3.1",
     "@vitest/coverage-v8": "^3.2.4",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.6",
     "rimraf": "^6.0.1",
-    "tsc-alias": "^1.8.16",
     "tsc-files": "^1.1.4",
     "tsx": "^4.20.5",
     "typescript": "^5.9.2",
