--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dev": "tsx --watch src/main.ts",
     "start": "node build/main.js",
     "test": "vitest",
+    "test-integration": "cross-env INTEGRATION=true vitest",
     "biome-check": "biome check --no-errors-on-unmatched",
     "biome-fix": "pnpm biome-check --write",
     "typecheck": "tsc",
@@ -33,9 +34,10 @@
     "@biomejs/biome": "^2.2.4",
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
-    "@mkvlrn/config": "^2.0.20",
-    "@types/node": "^24.4.0",
+    "@mkvlrn/config": "^2.0.21",
+    "@types/node": "^24.5.2",
     "@vitest/coverage-v8": "^3.2.4",
+    "cross-env": "^10.0.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.6",
     "rimraf": "^6.0.1",
