--- a/package.json
+++ b/package.json
@@ -17,35 +17,34 @@
     "template"
   ],
   "engines": {
-    "node": "22.x"
+    "node": "22.20"
   },
   "scripts": {
-    "build": "rimraf build && tsc -p tsconfig.build.json",
+    "build": "tsdown",
     "dev": "tsx --watch src/main.ts",
     "start": "node build/main.js",
     "test": "vitest",
-    "biome-check": "biome check --no-errors-on-unmatched",
+    "biome-check": "biome check --diagnostic-level=warn --no-errors-on-unmatched",
     "biome-fix": "pnpm biome-check --write",
     "typecheck": "tsc",
     "prepare": "husky"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.2.5",
+    "@biomejs/biome": "^2.2.6",
     "@commitlint/cli": "^20.1.0",
     "@commitlint/config-conventional": "^20.0.0",
-    "@mkvlrn/config": "^2.0.24",
-    "@types/node": "^24.7.0",
+    "@types/node": "^24.9.1",
     "@vitest/coverage-v8": "^3.2.4",
-    "cross-env": "^10.1.0",
     "husky": "^9.1.7",
-    "lint-staged": "^16.2.3",
-    "rimraf": "^6.0.1",
+    "lint-staged": "^16.2.5",
     "tsc-files": "^1.1.4",
+    "tsdown": "^0.15.9",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
+    "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.2.4"
   },
   "dependencies": {
-    "@mkvlrn/result": "^4.0.18"
+    "neverthrow": "^8.2.0"
   }
 }
