chore: lean on bundler mode, extensionless imports

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -52,7 +52,7 @@
   },
   "overrides": [
     {
-      "includes": ["**/*.ts"],
+      "includes": ["**/*"],
       "linter": {
         "rules": {
           "complexity": {
@@ -61,7 +61,9 @@
           },
           "correctness": {
             // importing from node is fine, this is backend only
-            "noNodejsModules": "off"
+            "noNodejsModules": "off",
+            // bundler mode for imports
+            "useImportExtensions": "off"
           }
         }
       }
