--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,6 @@
     "source.organizeImports": "never",
     "source.sortImports": "never"
   },
-  "eslint.enable": false
+  "eslint.enable": false,
+  "typescript.preferences.importModuleSpecifierEnding": "auto"
 }
