--- a/package.json
+++ b/package.json
@@ -38,13 +38,13 @@
     "husky": "^9.1.7",
     "lint-staged": "^16.2.6",
     "tsc-files": "^1.1.4",
-    "tsdown": "^0.16.0",
+    "tsdown": "^0.16.1",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^4.0.8"
   },
   "dependencies": {
-    "neverthrow": "^8.2.0"
+    "@mkvlrn/result": "^5.0.1"
   }
 }
