--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,28 +2,15 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "type": "node",
       "name": "source debug",
+      "type": "node",
       "request": "launch",
-      "runtimeExecutable": "npx",
-      "runtimeArgs": ["tsx"],
+      "runtimeExecutable": "tsx",
+      "runtimeArgs": ["--inspect-brk"],
       "args": ["src/main.ts"],
       "console": "internalConsole",
       "internalConsoleOptions": "openOnSessionStart",
       "skipFiles": ["<node_internals>/**", "${workspaceFolder}/node_modules/**"]
-    },
-    {
-      "type": "node",
-      "name": "bundle debug",
-      "request": "launch",
-      "program": "${workspaceFolder}/build/main.js",
-      "runtimeArgs": ["--enable-source-maps"],
-      "console": "internalConsole",
-      "internalConsoleOptions": "openOnSessionStart",
-      "sourceMaps": true,
-      "outFiles": ["${workspaceFolder}/build/**/*.js"],
-      "skipFiles": ["<node_internals>/**", "${workspaceFolder}/node_modules/**"],
-      "preLaunchTask": "build"
     }
   ]
 }
