--- a/package.json
+++ b/package.json
@@ -33,18 +33,19 @@
     "@biomejs/biome": "^2.3.10",
     "@commitlint/cli": "^20.2.0",
     "@commitlint/config-conventional": "^20.2.0",
+    "@mkvlrn/config": "^3.0.0",
     "@types/node": "^25.0.3",
     "@vitest/coverage-v8": "^4.0.16",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
     "tsc-files": "^1.1.4",
-    "tsdown": "^0.18.2",
+    "tsdown": "^0.18.3",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
     "vite-tsconfig-paths": "^6.0.3",
     "vitest": "^4.0.16"
   },
   "dependencies": {
-    "@mkvlrn/result": "^5.0.1"
+    "@mkvlrn/result": "^5.0.4"
   }
 }
