chore: use node current/25

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -23,4 +23,4 @@ jobs:
       - run: pnpm install --frozen-lockfile
       - run: pnpm typecheck
       - run: pnpm biome-check
-      - run: pnpm test --bail=1
+      - run: pnpm test --bail=1 --reporter=github-actions
