--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
       "name": "source debug",
       "type": "node",
       "request": "launch",
-      "runtimeExecutable": "tsx",
+      "runtimeExecutable": "node",
       "program": "${workspaceFolder}/src/main.ts",
       "console": "internalConsole",
       "internalConsoleOptions": "openOnSessionStart",
