--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -18,9 +18,9 @@ jobs:
           version: 10
       - uses: actions/setup-node@v4
         with:
-          node-version: "24"
+          node-version: "25"
           cache: "pnpm"
       - run: pnpm install --frozen-lockfile
       - run: pnpm typecheck
       - run: pnpm biome-check
-      - run: pnpm test --bail=1 --reporter=github-actions
+      - run: pnpm test-ci
